--- a/index.html
+++ b/index.html
@@ -81,32 +81,18 @@
                     <div class="horarios">
                         <ul>
                             <li>
-                                <span>Domingo</span>
+                                <span>Domingo e Feriados</span>
                                 <div class="hora">Fechado</div>
                             </li>
                             <li>
-                                <span>Segunda</span>
-                                <div class="hora">10:00 às 20:00</div>
+                                <span>Segunda à Sexta</span>
+                                <div class="hora">10:00 <br>às <br> 20:00</div>
                             </li>
                             <li>
-                                <span>Terça</span>
-                                <div class="hora">10:00 às 20:00</div>
-                            </li>
-                            <li>
-                                <span>Quarta</span>
-                                <div class="hora">10:00 às 20:00</div>
-                            </li>
-                            <li>
-                                <span>Quinta</span>
-                                <div class="hora">10:00 às 20:00</div>
-                            </li>
-                            <li>
-                                <span>Sexta</span>
-                                <div class="hora">10:00 às 20:00</div>
-                            </li>
+
                             <li>
                                 <span>Sabado</span>
-                                <div class="hora">10:00 às 18:00</div>
+                                <div class="hora">10:00 <br>às<br> 18:00</div>
                             </li>
 
                         </ul>
@@ -158,7 +144,7 @@
                 <div>
                     <h1>Galeria</h1>
                 </div>
-                
+
                 <div class="gradeImg">
                     <div class="boxImg">
                         <img src="./imagens/delfina-pan-wJoB8D3hnzc-unsplash.jpg" alt="">
@@ -179,19 +165,19 @@
                         <img src="./imagens/juan-carlos-pavon-jQ7Fh1q97AU-unsplash.jpg" alt="">
                     </div>
                 </div>
-                
+
             </section>
             <section class="localizacao">
-                    <dix class="mapBox">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d29233.61326528221!2d-46.53827269724844!3d-23.668745366286487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sprefeitura%20santo%20andre!5e0!3m2!1spt-BR!2sbr!4v1641344001318!5m2!1spt-BR!2sbr"
-                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                    </dix>
-                    <div class="mapText">
-                        <span">
-                            Av. Lino Jardim, 272 - Vila Bastos, Santo André - SP, 09041-031
-                            </span>
-                    </div>
+                <dix class="mapBox">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d29233.61326528221!2d-46.53827269724844!3d-23.668745366286487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sprefeitura%20santo%20andre!5e0!3m2!1spt-BR!2sbr!4v1641344001318!5m2!1spt-BR!2sbr"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </dix>
+                <div class="mapText">
+                    <span">
+                        Av. Lino Jardim, 272 - Vila Bastos, Santo André - SP, 09041-031
+                        </span>
+                </div>
             </section>
         </section>
         <footer>
