--- a/index.html
+++ b/index.html
@@ -85,16 +85,16 @@
                                 <div class="hora">Fechado</div>
                             </li>
                             <li>
-                                <span>Segunda à Sexta</span>
+                                <span>Sabado</span>
+                                <div class="hora">10:00 <br>às<br> 18:00</div>
+                            </li>
+                            <li>
+                                <span>Segunda <br> à <br> Sexta</span>
                                 <div class="hora">10:00 <br>às <br> 20:00</div>
                             </li>
                             <li>
 
-                            <li>
-                                <span>Sabado</span>
-                                <div class="hora">10:00 <br>às<br> 18:00</div>
-                            </li>
-
+                            
                         </ul>
                     </div>
                     <div class="boxCard">
