--- a/index.html
+++ b/index.html
@@ -101,22 +101,22 @@
                     </div>
                     <div class="boxCard">
                         <div class="card">
-                            <i class="material-icons">content_cut</i>
-                            <span class="cardTitulo">Corte</span>
+                            <img src="./imagens/barba_cabelo.png" alt="">
+                            <span class="cardTitulo">Barba e Cabelo</span>
                             <span class="cardText">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</span>
                         </div>
                         <div class="card">
-                            <i class="material-icons">content_cut</i>
-                            <span class="cardTitulo">Corte</span>
+                            <img src="./imagens/navalha.png" alt="">
+                            <span class="cardTitulo">Barba</span>
                             <span class="cardText">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</span>
                         </div>
                         <div class="card">
-                            <i class="material-icons">content_cut</i>
-                            <span class="cardTitulo">Corte</span>
+                            <img src="./imagens/pente_tesoura.png" alt="">
+                            <span class="cardTitulo">Cabelo</span>
                             <span class="cardText">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</span>
                         </div>
                         <div class="card">
-                            <i class="material-icons">content_cut</i>
+                            <img src="./imagens/secador.png" alt="">
                             <span class="cardTitulo">Corte</span>
                             <span class="cardText">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</span>
                         </div>
@@ -206,7 +206,10 @@
                     </div>
 
                 </div>
-                
+                <div class="whatsapp">
+                    <img src="./icons/logo-whatsapp.svg" alt="icone do whatsapp">
+                    
+                </div>
 
             </section>
         </section>
@@ -216,11 +219,16 @@
                 <h2>Visite nossas Redes sociais</h2>
                 <ul class="sci">
                     <li><a href="#">
-                            Instagram
+                            <img src="./icons/logo-facebook.svg" alt="">
                         </a></li>
                     <li><a href="#">
-                            Facebook
-                        </a></li>
+                        <img src="./icons/logo-instagram.svg" alt="">
+                        </a>
+                    </li>
+                    <li><a href="#">
+                        <img src="./icons/logo-twitter.svg" alt="">
+                        </a>
+                    </li>
                 </ul>
             </div>
         </footer>
